feat: add section integrate api and faq in home page

--- a/src/app/pages/page-generate-qrcode/page-generate-qrcode.component.html
+++ b/src/app/pages/page-generate-qrcode/page-generate-qrcode.component.html
@@ -9,7 +9,7 @@
         Generate various QR code to <span class="text-pink-100 bg-pink-800 px-1">Simplify</span> for sharing with others.
       </p>
     </div>
-    <div class="bg-gradient-to-tr from-pink-50 to-blue-200 rounded-2xl py-6 px-8 sm:py-8 sm:px-10 border-2 border-blue-100">
+    <div class="bg-gradient-to-tr from-pink-50 to-blue-200 rounded-2xl py-6 px-8 sm:py-8 sm:px-10 border-2 border-gray-100">
       <div class="grid grid-cols-3 sm:grid-cols-4 lg:grid-cols-6">
         <div class="flex flex-col items-center justify-center mb-2 sm:mb-4">
           <button 
@@ -28,7 +28,7 @@
             class="py-2 px-2 sm:py-4 sm:px-4 rounded-xl hover:bg-pink-100 hover:bg-opacity-50"
             (click)="selectedOption = 'url'"
           >
-            <fa-icon [icon]="faLink" class="inline-flex  bg-gray-100 rounded-full w-10 sm:w-12 h-10 sm:h-12 px-2 sm:px-2.5 py-2.5 sm:py-3 text-xl sm:text-2xl text-pink-700" ></fa-icon>          
+            <fa-icon [icon]="faLink" class="inline-flex bg-gray-100 rounded-full w-10 sm:w-12 h-10 sm:h-12 px-2 sm:px-2.5 py-2.5 sm:py-3 text-xl sm:text-2xl text-pink-700" ></fa-icon>          
             <p class="mt-2 font-medium font-sans text-sm sm:text-base text-gray-800">
               Url
             </p>
@@ -84,23 +84,25 @@
           </button>
         </div>
       </div>
-      @if (selectedOption === 'text') {
-        <app-form-text></app-form-text>
-      }
-      @if (selectedOption === 'url') {
-        <app-form-url></app-form-url>
-      }
-      @if (selectedOption === 'email') {
-        <app-form-email></app-form-email>
-      }
-      @if (selectedOption === 'whatsapp') {
-        <app-form-whatsapp></app-form-whatsapp>
-      }
-      @if (selectedOption === 'wifi') {
-        <app-form-wifi></app-form-wifi>
-      }
-      @if (selectedOption === 'socialmedia') {
-        <app-form-social-media></app-form-social-media>
+      @switch (selectedOption) {
+        @case ('text') {
+          <app-form-text></app-form-text>
+        }
+        @case ('url') {
+          <app-form-url></app-form-url>
+        }
+        @case ('email') {
+          <app-form-email></app-form-email>
+        }
+        @case ('whatsapp') {
+          <app-form-whatsapp></app-form-whatsapp>
+        }
+        @case ('wifi') {
+          <app-form-wifi></app-form-wifi>
+        }
+        @case ('socialmedia') {
+          <app-form-social-media></app-form-social-media>
+        }
       }
     </div>
   </div>
