--- a/src/app/pages/page-generate-url/page-generate-url.component.html
+++ b/src/app/pages/page-generate-url/page-generate-url.component.html
@@ -9,7 +9,7 @@
         <span class="text-blue-100 bg-blue-800 px-1">Simplify</span> your long url into a short link
       </p>
     </div>
-    <div class="bg-gradient-to-tr from-pink-50 to-blue-200 rounded-2xl py-6 px-8 sm:py-8 sm:px-10 border-2 border-blue-100">
+    <div class="bg-gradient-to-tr from-pink-50 to-blue-200 rounded-2xl py-6 px-8 sm:py-8 sm:px-10 border-2 border-gray-100">
       <div class="mt-4 space-y-2">
         <label for="url" class="font-medium font-sans text-sm sm:text-base text-gray-800">
           Paste your long url
@@ -18,7 +18,7 @@
           type="text" 
           id="url" 
           placeholder="https://www.example.com"
-          class="w-full px-4 py-2 border-2 font-sans border-blue-200 rounded-xl focus:outline-none  focus:border-blue-400 placeholder:text-blue-300 focus:placeholder:text-blue-100"
+          class="w-full px-4 py-2 border-2 font-sans border-blue-200 rounded-xl focus:outline-none focus:border-blue-400 placeholder:text-blue-300 focus:placeholder:text-blue-100"
         >
       </div>
       <div class="mt-4 space-y-2">
