--- a/src/app/shared/layout/navbar/navbar.component.html
+++ b/src/app/shared/layout/navbar/navbar.component.html
@@ -11,7 +11,7 @@
         }
       </ul>
       <div class="flex items-center">
-        <a routerLink="/login" class="bg-blue-200 text-gray-800 text-sm sm:text-base rounded-full border-2 border-gray-800 px-6 md:px-8 py-2 md:py-2.5 font-medium font-sans hover:bg-gray-800 hover:text-gray-100">
+        <a routerLink="/login" class="inline-flex items-center justify-center bg-gray-800 text-white text-sm sm:text-base rounded-2xl px-6 md:px-8 py-2 md:py-2.5 font-medium font-sans hover:bg-gray-900 hover:text-gray-100">
           Login
         </a>
       </div>
