feat: add login and register page & fix: form gap

--- a/src/app/pages/page-home/page-home.component.html
+++ b/src/app/pages/page-home/page-home.component.html
@@ -21,7 +21,7 @@
   <div id="Services" class="relative px-4 py-4 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-8">
     <div class="flex flex-col items-center justify-center max-w-xl my-2 sm:my-4 md:mx-auto lg:max-w-3xl mx-4 sm:mx-8">
       <h2 class="mb-4 sm:mb-8 font-sans text-3xl font-bold leading-none tracking-tight text-gray-800 sm:text-4xl md:text-5xl md:mx-auto">
-        We offer two services
+        We Offer Two Services
       </h2>
       <p class="mb-4 sm:mb-8 text-base font-medium font-sans leading-relaxed text-gray-700 sm:text-lg sm:leading-7">
         <span class="text-blue-100 bg-blue-800 px-1">Simplify</span> your url into a short link and generate various QR code to <span class="text-pink-100 bg-pink-800 px-1">Simplify</span> for sharing with others.
