--- a/src/app/pages/page-generate-qrcode/form-wifi/form-wifi.component.html
+++ b/src/app/pages/page-generate-qrcode/form-wifi/form-wifi.component.html
@@ -1,36 +1,34 @@
-<div class="mt-4 space-y-4">
-  <div class="items-center space-y-2">
-    <label for="ssid" class="font-medium font-sans text-sm sm:text-base text-gray-800">
-      Paste your long ssid
-    </label>
-    <input 
-      type="text" 
-      id="ssid" 
-      placeholder="wifi123"
-      class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-pink-200 rounded-xl focus:outline-none  focus:border-pink-400 placeholder:text-pink-300 focus:placeholder:text-pink-100"
-    >  
-  </div>
-  <div class="items-center space-y-2">
-    <label for="password" class="font-medium font-sans text-sm sm:text-base text-gray-800">
-      Paste your password
-    </label>
-    <input 
-      type="text" 
-      id="password" 
-      placeholder="password123"
-      class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-pink-200 rounded-xl focus:outline-none  focus:border-pink-400 placeholder:text-pink-300 focus:placeholder:text-pink-100"
-    >      
-  </div>
-  <div class="items-center space-y-2">
-    <label for="encryption" class="font-medium font-sans text-sm sm:text-base text-gray-800">
-      Encryption
-    </label>
-    <select id="encryption" class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-pink-200 rounded-xl focus:outline-none  focus:border-pink-400 placeholder:text-pink-300 focus:placeholder:text-pink-100">
-      <option value="WPA">WPA</option>
-      <option value="WEP">WEP</option>
-      <option value="nopass">nopass</option>
-    </select>      
-  </div>
+<div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
+  <label for="ssid" class="font-medium font-sans text-sm sm:text-base text-gray-800">
+    Paste your long ssid
+  </label>
+  <input 
+    type="text" 
+    id="ssid" 
+    placeholder="wifi123"
+    class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-pink-200 rounded-xl focus:outline-none  focus:border-pink-400 placeholder:text-pink-300 focus:placeholder:text-pink-100"
+  >  
+</div>
+<div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
+  <label for="password" class="font-medium font-sans text-sm sm:text-base text-gray-800">
+    Paste your password
+  </label>
+  <input 
+    type="text" 
+    id="password" 
+    placeholder="password123"
+    class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-pink-200 rounded-xl focus:outline-none  focus:border-pink-400 placeholder:text-pink-300 focus:placeholder:text-pink-100"
+  >      
+</div>
+<div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
+  <label for="encryption" class="font-medium font-sans text-sm sm:text-base text-gray-800">
+    Encryption
+  </label>
+  <select id="encryption" class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-pink-200 rounded-xl focus:outline-none  focus:border-pink-400 placeholder:text-pink-300 focus:placeholder:text-pink-100">
+    <option value="WPA">WPA</option>
+    <option value="WEP">WEP</option>
+    <option value="nopass">nopass</option>
+  </select>      
 </div>
 <div class="flex justify-end mt-6 sm:mt-8">
   <button type="submit" class="bg-pink-700 text-white text-sm sm:text-base rounded-xl px-6 md:px-8 py-2 md:py-2.5 font-medium font-sans hover:bg-pink-800 hover:text-pink-100">
