feat: add result generate shorthen url and qr code

--- a/src/app/pages/page-coming-soon-feature/page-coming-soon-feature.component.html
+++ b/src/app/pages/page-coming-soon-feature/page-coming-soon-feature.component.html
@@ -5,8 +5,8 @@
         Coming Soon
       </h2>
       <p class="mb-4 sm:mb-8 text-base font-medium font-sans leading-relaxed text-gray-700 sm:text-lg sm:leading-7">
-        This feature is coming soon
+        This feature is will be available soon. Stay tuned!
       </p>
-    </div>      
+    </div>
   </div>
 </div>
