--- a/src/app/pages/page-login/page-login.component.html
+++ b/src/app/pages/page-login/page-login.component.html
@@ -1,9 +1,12 @@
 <div class="bg-gradient-to-tr from-pink-50 to-blue-200 min-h-screen">
   <div class="relative px-4 py-4 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-sm md:px-24 lg:px-8 lg:py-8">
-    <div class="flex flex-col items-center justify-center max-w-xl my-8 sm:my-12 md:mx-auto lg:max-w-3xl mx-4 sm:mx-8">
-      <h2 class="mb-4 sm:mb-8 font-sans text-2xl font-bold leading-none tracking-tight text-gray-800 sm:text-3xl md:text-4xl md:mx-auto">
-        Login to your account
+    <div class="flex flex-col items-center justify-center max-w-xl my-4 sm:my-8 md:mx-auto lg:max-w-3xl mx-4 sm:mx-8">
+      <h2 class="mb-3 sm:mb-4 font-sans text-2xl font-bold leading-none tracking-tight text-gray-800 sm:text-3xl md:text-4xl md:mx-auto">
+        Login
       </h2>
+      <p class="mb-3 sm:mb-4 text-base font-medium font-sans leading-relaxed text-gray-700 sm:text-lg sm:leading-7">
+        Manage and track your QR Code and URL
+      </p>
     </div>
     <div class="bg-gradient-to-tr from-pink-50 to-blue-200 rounded-2xl py-6 px-8 sm:py-8 sm:px-10 border-2 border-gray-100">
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
@@ -13,7 +16,7 @@
         <input 
           type="email" 
           id="email" 
-          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none focus:border-gray-400 placeholder:text-gray-300 focus:placeholder:text-gray-100"
+          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none focus:border-gray-300"
         >
       </div>
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
@@ -23,7 +26,7 @@
         <input 
           type="password" 
           id="password" 
-          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none  focus:border-gray-400 placeholder:text-gray-300 focus:placeholder:text-gray-100"
+          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none  focus:border-gray-300"
         >
       </div>
       <div class="flex justify-end mt-6">
