--- a/src/app/pages/page-generate-url/page-generate-url.component.html
+++ b/src/app/pages/page-generate-url/page-generate-url.component.html
@@ -9,7 +9,7 @@
         <span class="text-blue-100 bg-blue-800 px-1">Simplify</span> your long url into a short link
       </p>
     </div>
-    <div class="bg-gradient-to-tr from-pink-50 to-blue-200 rounded-2xl py-6 px-8 sm:py-8 sm:px-10 border-2 border-gray-100">
+    <div class="bg-gradient-to-tr from-pink-50 to-blue-200 my-4 sm:my-8 rounded-2xl py-6 px-8 sm:py-8 sm:px-10 border-2 border-gray-100">
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
         <label for="url" class="font-medium font-sans text-sm sm:text-base text-gray-800">
           Paste your long url
@@ -36,6 +36,21 @@
         <button type="submit" class="bg-blue-700 text-white text-sm sm:text-base rounded-xl px-6 md:px-8 py-2 md:py-2.5 font-medium font-sans hover:bg-blue-800 hover:text-blue-100">
           Generate
         </button>  
+      </div>
+    </div>
+    <div class="bg-gradient-to-tr from-pink-50 to-blue-200 my-4 sm:my-8 rounded-2xl py-6 px-8 sm:py-8 sm:px-10 border-2 border-gray-100">
+      <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
+        <div class="inline-flex justify-between h-12 bg-white border-2 border-blue-200 w-full rounded-xl">
+          <p class="mb-4 sm:mb-8 px-2.5 sm:px-3 py-1.5 sm:py-2 text-sm sm:text-base font-medium font-sans leading-relaxed text-gray-800 sm:leading-7">
+            https://github.com/naufan17
+          </p>
+          <button class="bg-blue-700 text-white text-sm sm:text-base rounded-xl px-4 md:px-6 py-2 md:py-2.5 font-medium font-sans hover:bg-blue-800 hover:text-blue-100">
+            Copy
+          </button>
+        </div>
+        <p class="mb-2 sm:mb-4 font-medium font-sans text-sm sm:text-base text-pink-700">
+          Expires in 30 days
+        </p>
       </div>
     </div>
   </div>
