--- a/src/app/pages/page-generate-url/page-generate-url.component.html
+++ b/src/app/pages/page-generate-url/page-generate-url.component.html
@@ -1,15 +1,15 @@
 <div class="bg-gradient-to-tr from-pink-50 to-blue-200 min-h-screen">
   <app-navbar></app-navbar>
-  <div class="relative px-4 py-4 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-lg md:px-24 lg:px-8 lg:py-8">
+  <div class="relative px-4 py-5 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-lg md:px-24 lg:px-8 lg:py-10">
     <div class="flex flex-col items-center justify-center max-w-xl my-4 sm:my-8 md:mx-auto lg:max-w-3xl mx-4 sm:mx-8">
-      <h2 class="mb-3 sm:mb-4 font-sans text-3xl font-bold leading-none tracking-tight text-gray-800 sm:text-4xl md:mx-auto">
+      <h2 class="mb-3 sm:mb-4 font-sans text-2xl font-bold leading-none tracking-tight text-gray-800 sm:text-3xl md:text-4xl md:mx-auto">
         URL Shortener
       </h2>
       <p class="mb-3 sm:mb-4 text-base font-medium font-sans leading-relaxed text-gray-700 sm:text-lg sm:leading-7">
         <span class="text-blue-100 bg-blue-800 px-1">Simplify</span> your long url into a short link
       </p>
     </div>
-    <div class="bg-gradient-to-tr from-pink-50 to-blue-200 my-4 sm:my-8 rounded-2xl py-6 px-8 sm:py-8 sm:px-10 border-2 border-gray-100">
+    <div class="bg-gradient-to-tr from-pink-50 to-blue-200 my-4 sm:my-8 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
         <label for="url" class="font-medium font-sans text-sm sm:text-base text-gray-800">
           Paste your long url
@@ -38,13 +38,13 @@
         </button>  
       </div>
     </div>
-    <div class="bg-gradient-to-tr from-pink-50 to-blue-200 my-4 sm:my-8 rounded-2xl py-6 px-8 sm:py-8 sm:px-10 border-2 border-gray-100">
+    <div class="bg-gradient-to-tr from-pink-50 to-blue-200 my-4 sm:my-8 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
-        <div class="inline-flex justify-between h-12 bg-white border-2 border-blue-200 w-full rounded-xl">
+        <div class="inline-flex justify-between h-9 sm:h-12 bg-white border-2 border-blue-200 w-full rounded-xl">
           <p class="mb-4 sm:mb-8 px-2.5 sm:px-3 py-1.5 sm:py-2 text-sm sm:text-base font-medium font-sans leading-relaxed text-gray-800 sm:leading-7">
             https://github.com/naufan17
           </p>
-          <button class="bg-blue-700 text-white text-sm sm:text-base rounded-xl px-4 md:px-6 py-2 md:py-2.5 font-medium font-sans hover:bg-blue-800 hover:text-blue-100">
+          <button class="bg-blue-700 text-white text-sm sm:text-base rounded-xl px-4 md:px-6 py-1.5 md:py-2 font-medium font-sans hover:bg-blue-800 hover:text-blue-100">
             Copy
           </button>
         </div>
