--- a/src/app/pages/page-register/page-register.component.html
+++ b/src/app/pages/page-register/page-register.component.html
@@ -1,5 +1,5 @@
-<div class="bg-gradient-to-tr from-pink-50 to-blue-200 min-h-screen">
-  <div class="relative px-4 py-4 mx-auto sm:max-w-3xl lg:max-w-screen-sm md:px-24 lg:px-8 lg:py-8">
+<div class="flex items-center justify-center min-h-screen bg-gradient-to-tr from-pink-50 to-blue-200">
+  <div class="relative px-4 py-5 mx-auto w-full sm:min-w-xl md:max-w-screen-md lg:max-w-screen-sm md:px-24 lg:px-8 lg:py-10">
     <div class="flex flex-col items-center justify-center max-w-xl my-4 sm:my-8 md:mx-auto lg:max-w-3xl mx-4 sm:mx-8">
       <h2 class="mb-3 sm:mb-4 font-sans text-2xl font-bold leading-none tracking-tight text-gray-800 sm:text-3xl md:text-4xl md:mx-auto">
         Register
@@ -8,7 +8,7 @@
         Create an account to manage and track your QR Code and URL
       </p>
     </div>
-    <div class="bg-gradient-to-tr from-pink-50 to-blue-200 rounded-2xl py-6 px-8 sm:py-8 sm:px-10 border-2 border-gray-100">
+    <div class="bg-gradient-to-tr from-pink-50 to-blue-200 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
         <label for="name" class="font-medium font-sans text-sm sm:text-base text-gray-800">
           Name
