--- a/src/app/pages/page-generate-url/page-generate-url.component.html
+++ b/src/app/pages/page-generate-url/page-generate-url.component.html
@@ -9,15 +9,18 @@
         <span class="text-blue-100 bg-blue-800 px-1">Simplify</span> your long url into a short link
       </p>
     </div>
-    <div class="bg-gradient-to-tr from-pink-50 to-blue-200 my-4 sm:my-8 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
+    <form [formGroup]="shotenUrlForm" (ngSubmit)="onSubmit()" class="bg-gradient-to-tr from-pink-50 to-blue-200 my-4 sm:my-8 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
-        <label for="url" class="font-medium font-sans text-sm sm:text-base text-gray-800">
+        <label for="urlOrigin" class="font-medium font-sans text-sm sm:text-base text-gray-800">
           Paste your long url
         </label>
         <input 
           type="text" 
-          id="url" 
+          id="urOriginl" 
+          name="urlOrigin"
+          formControlName="urlOrigin"
           placeholder="https://www.example.com"
+          required
           class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans border-blue-200 rounded-xl focus:outline-none focus:border-blue-400 placeholder:text-blue-300 focus:placeholder:text-blue-100"
         >
       </div>
@@ -28,31 +31,42 @@
         <input 
           type="text" 
           id="id" 
+          name="id"
+          formControlName="id"
           placeholder="abc123"
           class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-blue-200 rounded-xl focus:outline-none  focus:border-blue-400 placeholder:text-blue-300 focus:placeholder:text-blue-100"
         >
       </div>
       <div class="flex justify-end mt-6">
-        <button type="submit" class="bg-blue-700 text-white text-sm sm:text-base rounded-xl px-6 md:px-8 py-2 md:py-2.5 font-medium font-sans hover:bg-blue-800 hover:text-blue-100">
+        <button type="submit" [disabled]="!shotenUrlForm.valid" disabled class="bg-blue-700 text-white text-sm sm:text-base rounded-xl px-6 md:px-8 py-2 md:py-2.5 font-medium font-sans hover:bg-blue-800 hover:text-blue-100">
           Generate
         </button>  
       </div>
-    </div>
-    <div class="bg-gradient-to-tr from-pink-50 to-blue-200 my-4 sm:my-8 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
-      <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
-        <div class="inline-flex justify-between h-9 sm:h-12 bg-white border-2 border-blue-200 w-full rounded-xl">
-          <p class="mb-4 sm:mb-8 px-2.5 sm:px-3 py-1.5 sm:py-2 text-sm sm:text-base font-medium font-sans leading-relaxed text-gray-800 sm:leading-7">
-            https://github.com/naufan17
-          </p>
-          <button class="bg-blue-700 text-white text-sm sm:text-base rounded-xl px-4 md:px-6 py-1.5 md:py-2 font-medium font-sans hover:bg-blue-800 hover:text-blue-100">
-            Copy
-          </button>
+    </form>
+    @if(urlShort) {
+      <div class="bg-gradient-to-tr from-pink-50 to-blue-200 my-4 sm:my-8 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
+        <div class="space-y-1 sm:space-y-2">
+          <!-- @if(isCopied){
+            <p class="mt-2 text-green-600 text-sm sm:text-base font-medium font-sans">
+              QR code copied to clipboard!
+            </p>
+          } -->
+          <div class="flex flex-row items-center justify-between space-x-4">
+            <div class="flex h-9 sm:h-12 bg-white border-2 border-blue-200 w-full rounded-xl">
+              <p class="inline-flex px-2.5 sm:px-3 py-1.5 sm:py-2 text-sm sm:text-base font-medium font-sans leading-relaxed text-gray-800 sm:leading-7" id="qrcodeText">
+                {{ urlShort }}
+              </p>
+            </div>
+            <button class="inline-flex bg-blue-700 text-white text-sm sm:text-base rounded-xl px-4 md:px-6 py-2 md:py-2.5 font-medium font-sans hover:bg-blue-800 hover:text-blue-100" (click)="copyToClipboard()">
+              Copy
+            </button>
+          </div>
+          <!-- <p class="mb-2 sm:mb-4 font-medium font-sans text-sm sm:text-base text-pink-700">
+            Expires in 30 days
+          </p> -->
         </div>
-        <p class="mb-2 sm:mb-4 font-medium font-sans text-sm sm:text-base text-pink-700">
-          Expires in 30 days
-        </p>
-      </div>
-    </div>
+      </div>  
+    }
   </div>
   <app-footer></app-footer>
 </div>
