feat: make modal result qrcode and short url & change home page button link to qrcode and short url

--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -31,7 +31,7 @@
       </div>
       <div class="flex justify-center sm:justify-end items-end col-span-2 sm:col-span-1">
         <p class="font-medium font-sans text-gray-800 text-sm sm:text-base">
-          Copyright &copy; {{ dateYear }}  Muhammad Naufan Athoillah
+          Copyright &copy; {{ dateYear }} Simplify All Rights Reserved
         </p>
       </div>
     </div>
