--- a/src/app/pages/page-generate-qrcode/page-generate-qrcode.component.html
+++ b/src/app/pages/page-generate-qrcode/page-generate-qrcode.component.html
@@ -59,17 +59,24 @@
         }
       }
     @if(qrcode) {
-      <div class="bg-gradient-to-tr from-pink-50 to-blue-200 my-4 sm:my-8 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
-        <div class="flex flex-col justify-center items-center ">
-          <img 
-            class="shadow-lg rounded-3xl"
-            src="{{ qrcode }}"
-            alt=""
-          >          
-          <button class="mt-4 sm:mt-8 bg-pink-700 text-white text-sm sm:text-base rounded-xl px-4 md:px-6 py-2 md:py-2.5 font-medium font-sans hover:bg-pink-800 hover:text-pink-100">
-            Download
-          </button>
-        </div>
+      <div class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50">
+        <div class="bg-gradient-to-tr w-5/6 sm:w-3/4 from-pink-50 to-blue-200 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
+          <div class="flex justify-end mb-4">
+            <button (click)="closeModal()" class="inline-flex items-center justify-center">
+              <fa-icon [icon]="faTimes" class="text-xl sm:text-2xl text-pink-800 hover:text-pink-900"></fa-icon>
+            </button>
+          </div>
+          <div class="flex flex-col justify-center items-center">
+            <img 
+              class="shadow-lg rounded-3xl"
+              src="{{ qrcode }}"
+              alt=""
+            >          
+            <button (click)="downloadQrcode()" class="mt-4 sm:mt-8 bg-pink-700 text-white text-sm sm:text-base rounded-xl px-4 md:px-6 py-2 md:py-2.5 font-medium font-sans hover:bg-pink-800 hover:text-pink-100">
+              Download
+            </button>
+          </div>
+        </div>        
       </div>        
     }
   </div>
