--- a/src/app/pages/page-home/page-home.component.html
+++ b/src/app/pages/page-home/page-home.component.html
@@ -10,10 +10,10 @@
           <span class="text-blue-100 bg-blue-800 px-1">Simplify</span> is a powerful tool designed to streamline your digital life by shortening URLs and generating QR codes for easy sharing.
         </p>
         <div class="flex flex-row space-x-4">
-          <a routerLink="/generate/qrcode" class="inline-flex items-center justify-center py-2 sm:py-2.5 px-2 sm:px-4 bg-pink-700 text-white rounded-xl text-sm sm:text-base font-medium font-sans hover:bg-pink-980 hover:text-pink-100">
+          <a routerLink="/generate/qrcode" class="inline-flex items-center justify-center py-2 sm:py-2.5 px-3 sm:px-6 bg-pink-700 text-white rounded-xl text-sm sm:text-base font-medium font-sans hover:bg-pink-980 hover:text-pink-100">
             <fa-icon [icon]="faQrcode" class="mr-2"></fa-icon>QR Code
           </a>
-          <a routerLink="/generate/url" class="inline-flex items-center justify-center py-2 sm:py-2.5 px-2 sm:px-4 bg-blue-700 text-white rounded-xl text-sm sm:text-base font-medium font-sans hover:bg-blue-800 hover:text-blue-100">
+          <a routerLink="/generate/url" class="inline-flex items-center justify-center py-2 sm:py-2.5 px-3 sm:px-6 bg-blue-700 text-white rounded-xl text-sm sm:text-base font-medium font-sans hover:bg-blue-800 hover:text-blue-100">
             <fa-icon [icon]="faLink" class="mr-2"></fa-icon>URL Shortener
           </a>      
         </div>
@@ -49,7 +49,7 @@
             Key Feature
           </h6>
           @for (feature of featureQrCode; track feature){
-            <div class="flex my-4">
+            <div class="flex my-2 sm:my-4">
               <fa-icon [icon]="faCheck" class="bg-gray-800 rounded-full w-5 sm:w-6 h-5 sm:h-6 px-1 py-0.5 sm:py-0 text-sm sm:text-lg text-pink-100"></fa-icon>
               @if (feature === featureQrCode[featureQrCode.length - 1]) {
                 <p class="ml-2 text-sm sm:text-base font-semibold text font-sans text-gray-800">
@@ -63,8 +63,8 @@
               }
             </div>
           }
-          <div class="flex mt-6">
-            <a routerLink="/login" class="inline-flex justify-center items-center bg-gray-800 h-9 sm:h-10 w-full text-white rounded-xl text-sm sm:text-base font-medium font-sans hover:bg-gray-900 hover:text-gray-100">
+          <div class="flex mt-3 sm:mt-6">
+            <a routerLink="/login" class="inline-flex justify-center items-center bg-gray-800 h-8 sm:h-10 w-full text-white rounded-xl text-sm sm:text-base font-medium font-sans hover:bg-gray-900 hover:text-gray-100">
               Login / Register
             </a>    
           </div>
@@ -83,7 +83,7 @@
             Key Feature
           </h6>
           @for (feature of featureShortenUrl; track feature){
-            <div class="flex my-4">
+            <div class="flex my-2 sm:my-4">
               <fa-icon [icon]="faCheck" class="bg-gray-800 rounded-full w-5 sm:w-6 h-5 sm:h-6 px-1 py-0.5 sm:py-0 text-sm sm:text-lg text-blue-100"></fa-icon>
               @if (feature === featureShortenUrl[featureShortenUrl.length - 1]) {
                 <p class="ml-2 text-sm sm:text-base font-semibold text font-sans text-gray-800">
@@ -97,8 +97,8 @@
               }
             </div>
           }
-          <div class="flex mt-6">
-            <a routerLink="/login" class="inline-flex justify-center items-center bg-gray-800 h-9 sm:h-10 w-full text-white rounded-xl text-sm sm:text-base font-medium font-sans hover:bg-gray-900 hover:text-gray-100">
+          <div class="flex mt-3 sm:mt-6">
+            <a routerLink="/login" class="inline-flex justify-center items-center bg-gray-800 h-8 sm:h-10 w-full text-white rounded-xl text-sm sm:text-base font-medium font-sans hover:bg-gray-900 hover:text-gray-100">
               Login / Register
             </a>    
           </div>
