--- a/src/app/pages/page-login/page-login.component.html
+++ b/src/app/pages/page-login/page-login.component.html
@@ -8,7 +8,7 @@
         Manage and track your QR Code and URL
       </p>
     </div>
-    <div class="bg-gradient-to-tr from-pink-50 to-blue-200 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="bg-gradient-to-tr from-pink-50 to-blue-200 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
         <label for="email" class="font-medium font-sans text-sm sm:text-base text-gray-800">
           Email
@@ -16,6 +16,10 @@
         <input 
           type="email" 
           id="email" 
+          name="email"
+          formControlName="email"
+          placeholder="email@example.com"
+          required
           class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none focus:border-gray-300"
         >
       </div>
@@ -26,11 +30,15 @@
         <input 
           type="password" 
           id="password" 
+          name="password"
+          formControlName="password"
+          placeholder="password123"
+          required
           class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none  focus:border-gray-300"
         >
       </div>
       <div class="flex justify-end mt-6">
-        <button type="submit" class="bg-gray-800 text-white text-sm sm:text-base rounded-xl w-full py-2 md:py-2.5 font-medium font-sans hover:bg-gray-900 hover:text-gray-100">
+        <button type="submit" [disabled]="!loginForm.valid" disabled class="bg-gray-800 text-white text-sm sm:text-base rounded-xl w-full py-2 md:py-2.5 font-medium font-sans hover:bg-gray-900 hover:text-gray-100">
           Login
         </button>  
       </div>
@@ -41,6 +49,7 @@
             Register
           </a>
         </p>
-    </div>
+      </div>
+    </form>
   </div>
 </div>
