--- a/src/app/pages/page-dashboard/page-dashboard.component.html
+++ b/src/app/pages/page-dashboard/page-dashboard.component.html
@@ -1,4 +1,5 @@
-<div class="bg-gradient-to-tr from-pink-50 to-blue-200 min-h-screen">
+<app-sidebar></app-sidebar>
+<div class="bg-gradient-to-tr from-pink-50 to-blue-200 min-h-screen sm:ml-48 md:ml-64">
   <div class="relative px-4 py-5 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-10">
     <div class="flex flex-col items-center justify-center max-w-xl my-8 sm:my-12 md:mx-auto lg:max-w-3xl mx-4 sm:mx-8">
       <h2 class="mb-4 sm:mb-8 font-sans text-3xl font-bold leading-none tracking-tight text-gray-800 sm:text-5xl md:mx-auto">
