--- a/src/app/shared/layout/navbar/navbar.component.html
+++ b/src/app/shared/layout/navbar/navbar.component.html
@@ -16,14 +16,22 @@
           </li>
         }
       </ul>
-      <div class="hidden sm:flex items-center space-x-2 sm:space-x-4">
-        <a routerLink="/login" class="inline-flex items-center justify-center text-gray-800 border-2 border-gray-800 text-sm sm:text-base rounded-xl px-4 md:px-6 py-1.5 md:py-2 font-medium font-sans hover:bg-gray-800 hover:text-gray-100">
-          Login
-        </a>
-        <a routerLink="/register" class="inline-flex items-center justify-center bg-gray-800 text-white border-2 border-gray-800 text-sm sm:text-base rounded-xl px-4 md:px-6 py-1.5 md:py-2 font-medium font-sans hover:bg-gray-900 hover:border-gray-900 hover:text-gray-100">
-          Get Started
-        </a>
-      </div>
+      @if(isLoggedIn){
+        <div class="hidden sm:flex items-center space-x-2 sm:space-x-4">
+          <a routerLink="/dashboard" class="inline-flex items-center justify-center bg-gray-800 text-white border-2 border-gray-800 text-sm sm:text-base rounded-xl px-4 md:px-6 py-1.5 md:py-2 font-medium font-sans hover:bg-gray-900 hover:border-gray-900 hover:text-gray-100">
+            Dashboard
+          </a>
+        </div>
+      } @else {
+        <div class="hidden sm:flex items-center space-x-2 sm:space-x-4">
+          <a routerLink="/login" class="inline-flex items-center justify-center text-gray-800 border-2 border-gray-800 text-sm sm:text-base rounded-xl px-4 md:px-6 py-1.5 md:py-2 font-medium font-sans hover:bg-gray-800 hover:text-gray-100">
+            Login
+          </a>
+          <a routerLink="/register" class="inline-flex items-center justify-center bg-gray-800 text-white border-2 border-gray-800 text-sm sm:text-base rounded-xl px-4 md:px-6 py-1.5 md:py-2 font-medium font-sans hover:bg-gray-900 hover:border-gray-900 hover:text-gray-100">
+            Get Started
+          </a>
+        </div>  
+      }
     </div>
   </div>
 </nav>
