--- a/src/app/pages/page-generate-qrcode/form-social-media/form-social-media.component.html
+++ b/src/app/pages/page-generate-qrcode/form-social-media/form-social-media.component.html
@@ -1,4 +1,7 @@
 <form [formGroup]="socialMediaForm" (ngSubmit)="onSubmit()" class="bg-gradient-to-tr from-pink-50 to-blue-200 my-4 sm:my-8 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
+  @if(errorMessage) {
+    <app-alert-error [errorMessage]="errorMessage" (clearMessage)="clearMessage()"></app-alert-error>
+  }
   <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
     <label for="username" class="font-medium font-sans text-sm sm:text-base text-gray-800">
       Paste your username
@@ -12,6 +15,11 @@
       required
       class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-pink-200 rounded-xl focus:outline-none  focus:border-pink-400 placeholder:text-pink-300 focus:placeholder:text-pink-100"
     >  
+    @if(socialMediaForm.get('username')?.invalid && socialMediaForm.get('username')?.touched) {
+      @if(socialMediaForm.get('username')?.errors?.['required']) {
+        <span class="text-red-600 ml-1 text-sm sm:text-base">Username is required</span>
+      }
+    }
   </div>
   <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
     <label for="socialMedia" class="font-medium font-sans text-sm sm:text-base text-gray-800">
@@ -23,10 +31,19 @@
       <option value="x">X</option>
       <option value="linkedin">LinkedIn</option>
     </select>  
+    @if(socialMediaForm.get('socialMedia')?.invalid && socialMediaForm.get('socialMedia')?.touched) {
+      @if(socialMediaForm.get('socialMedia')?.errors?.['required']) {
+        <span class="text-red-600 ml-1 text-sm sm:text-base">Social Media is required</span>
+      }
+    }
   </div>
   <div class="flex justify-end mt-6 sm:mt-8">
     <button type="submit" class="bg-pink-700 text-white text-sm sm:text-base rounded-xl px-6 md:px-8 py-2 md:py-2.5 font-medium font-sans hover:bg-pink-800 hover:text-pink-100">
-      Generate
+      @if(isLoading) {
+        <app-loading-button></app-loading-button>
+      } @else {
+        Generate
+      }
     </button>  
   </div>
 </form>
