--- a/src/app/pages/page-generate-qrcode/form-wifi/form-wifi.component.html
+++ b/src/app/pages/page-generate-qrcode/form-wifi/form-wifi.component.html
@@ -1,5 +1,8 @@
 <form [formGroup]="wifiForm" (ngSubmit)="onSubmit()" class="bg-gradient-to-tr from-pink-50 to-blue-200 my-4 sm:my-8 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
-    <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
+  @if(errorMessage) {
+    <app-alert-error [errorMessage]="errorMessage" (clearMessage)="clearMessage()"></app-alert-error>
+  }
+  <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
     <label for="ssid" class="font-medium font-sans text-sm sm:text-base text-gray-800">
       Paste your long ssid
     </label>
@@ -11,35 +14,60 @@
       formControlName="ssid"
       required
       class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-pink-200 rounded-xl focus:outline-none  focus:border-pink-400 placeholder:text-pink-300 focus:placeholder:text-pink-100"
-    >  
+    >
+    @if(wifiForm.get('ssid')?.invalid && wifiForm.get('ssid')?.touched) {
+      @if(wifiForm.get('ssid')?.errors?.['required']) {
+        <span class="text-red-600 ml-1 text-sm sm:text-base">SSID is required</span>
+      }
+    }
   </div>
   <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
     <label for="password" class="font-medium font-sans text-sm sm:text-base text-gray-800">
       Paste your password
     </label>
     <input 
-      type="text" 
+      type="password" 
       id="password" 
       name="password"
       placeholder="password123"
       formControlName="password"
       required
       class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-pink-200 rounded-xl focus:outline-none  focus:border-pink-400 placeholder:text-pink-300 focus:placeholder:text-pink-100"
-    >      
+    >
+    @if(wifiForm.get('password')?.invalid && wifiForm.get('password')?.touched) {
+      @if(wifiForm.get('password')?.errors?.['required']) {
+        <span class="text-red-600 ml-1 text-sm sm:text-base">Password is required</span>
+      }
+    }
   </div>
   <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
     <label for="encryption" class="font-medium font-sans text-sm sm:text-base text-gray-800">
       Encryption
     </label>
-    <select name="encryption" formControlName="encryption" id="encryption" class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-pink-200 rounded-xl focus:outline-none  focus:border-pink-400 placeholder:text-pink-300 focus:placeholder:text-pink-100">
-      <option value="WPA">WPA</option>
+    <select 
+      name="encryption" 
+      formControlName="encryption" 
+      id="encryption" 
+      required
+      class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-pink-200 rounded-xl focus:outline-none  focus:border-pink-400 placeholder:text-pink-300 focus:placeholder:text-pink-100"
+    >
+      <option selected value="WPA">WPA</option>
       <option value="WEP">WEP</option>
       <option value="nopass">nopass</option>
     </select>      
+    @if(wifiForm.get('encryption')?.invalid && wifiForm.get('encryption')?.touched) {
+      @if(wifiForm.get('encryption')?.errors?.['required']) {
+        <span class="text-red-600 ml-1 text-sm sm:text-base">Encryption is required</span>
+      }
+    }
   </div>
   <div class="flex justify-end mt-6 sm:mt-8">
     <button type="submit" class="bg-pink-700 text-white text-sm sm:text-base rounded-xl px-6 md:px-8 py-2 md:py-2.5 font-medium font-sans hover:bg-pink-800 hover:text-pink-100">
-      Generate
+      @if(isLoading) {
+        <app-loading-button></app-loading-button>
+      } @else {
+        Generate
+      }
     </button>  
   </div>
 </form>
