--- a/src/app/pages/page-generate-qrcode/page-generate-qrcode.component.html
+++ b/src/app/pages/page-generate-qrcode/page-generate-qrcode.component.html
@@ -60,7 +60,7 @@
       }
     @if(qrcode) {
       <div class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50">
-        <div class="bg-gradient-to-tr w-5/6 sm:w-3/4 from-pink-50 to-blue-200 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
+        <div class="bg-gradient-to-tr w-auto from-pink-50 to-blue-200 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
           <div class="flex justify-end mb-4">
             <button (click)="closeModal()" class="inline-flex items-center justify-center">
               <fa-icon [icon]="faTimes" class="text-xl sm:text-2xl text-pink-800 hover:text-pink-900"></fa-icon>
