--- a/src/app/pages/page-login/page-login.component.html
+++ b/src/app/pages/page-login/page-login.component.html
@@ -7,14 +7,7 @@
         </h2>
       </div>
       @if(errorMessage) {
-        <div class="bg-red-100 border-2 border-red-400  px-2.5 sm:px-3 py-1.5 sm:py-2 rounded-lg relative" role="alert">
-          <span class="block sm:inline text-red-800 font-sans text-sm sm:text-base font-semibold">{{ errorMessage }}</span>
-          <span class="absolute top-0 bottom-0 right-0 px-2.5 sm:px-3 py-1.5 sm:py-2" (click)="clearMessage()"  role="button">
-            <svg class="fill-current h-6 w-6 text-red-800" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-              <path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/>
-            </svg>
-          </span>
-        </div>
+        <app-alert-error [errorMessage]="errorMessage" (clearMessage)="clearMessage()"></app-alert-error>
       } 
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
         <label for="email" class="font-medium font-sans text-sm sm:text-base text-gray-800">
