feat: add profile page and redesign input form

--- a/src/app/pages/page-home/page-home.component.html
+++ b/src/app/pages/page-home/page-home.component.html
@@ -64,7 +64,7 @@
             </div>
           }
           <div class="flex mt-3 sm:mt-6">
-            <a routerLink="/register" class="inline-flex justify-center items-center bg-gray-800 h-8 sm:h-10 w-full text-white rounded-xl text-sm sm:text-base font-medium font-sans hover:bg-gray-900 hover:text-gray-100">
+            <a routerLink="/register" class="inline-flex justify-center items-center bg-gray-800 py-2 md:py-2.5 w-full text-white rounded-xl text-sm sm:text-base font-medium font-sans hover:bg-gray-900 hover:text-gray-100">
               Get Started
             </a>    
           </div>
@@ -98,7 +98,7 @@
             </div>
           }
           <div class="flex mt-3 sm:mt-6">
-            <a routerLink="/register" class="inline-flex justify-center items-center bg-gray-800 h-8 sm:h-10 w-full text-white rounded-xl text-sm sm:text-base font-medium font-sans hover:bg-gray-900 hover:text-gray-100">
+            <a routerLink="/register" class="inline-flex justify-center items-center bg-gray-800 py-2 md:py-2.5 w-full text-white rounded-xl text-sm sm:text-base font-medium font-sans hover:bg-gray-900 hover:text-gray-100">
               Get Started
             </a>    
           </div>
@@ -114,7 +114,7 @@
       <p class="mb-4 sm:mb-8 text-base font-medium font-sans leading-relaxed text-gray-700 sm:text-lg sm:leading-7">
         You can integrate this API into your own project.
       </p>
-      <a routerLink="documentation" class="inline-flex items-center justify-center py-2 sm:py-2.5 px-4 sm:px-8 bg-gray-800 text-white rounded-xl text-sm sm:text-base font-medium font-sans hover:bg-gray-900 hover:text-gray-100">
+      <a routerLink="documentation" class="inline-flex items-center justify-center py-2 sm:py-2.5 px-4 sm:px-6 bg-gray-800 text-white rounded-xl text-sm sm:text-base font-medium font-sans hover:bg-gray-900 hover:text-gray-100">
         Documentation
       </a>
     </div>
