--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar fixed top-0 left-0 h-full sm:w-48 md:w-64 px-4 bg-gradient-to-tr from-pink-50 to-blue-100 shadow-md">
+<div class="sidebar fixed top-0 left-0 h-full sm:w-48 md:w-64 px-4 bg-transparent">
   <ul class="flex flex-row sm:flex-col sm:mt-12">
     <li class="flex flex-col sm:flex-row items-center px-4 md:px-6 py-2 w-22 sm:w-auto hover:bg-gradient-to-tr from-pink-50 to-blue-100 rounded-lg hover:shadow-sm">
       <fa-icon [icon]="faHouse" class="inline-flex justify-center items-center bg-gray-100 rounded-lg w-7 h-7 text-sm sm:text-base text-gray-800"></fa-icon>
