--- a/src/app/pages/page-generate-qrcode/form-text/form-text.component.html
+++ b/src/app/pages/page-generate-qrcode/form-text/form-text.component.html
@@ -1,6 +1,9 @@
 <form [formGroup]="textForm" (ngSubmit)="onSubmit()" class="bg-gradient-to-tr from-pink-50 to-blue-200 my-4 sm:my-8 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
   @if(errorMessage) {
-    <app-alert-error [errorMessage]="errorMessage" (clearMessage)="clearMessage()"></app-alert-error>
+    <app-alert-error 
+      [errorMessage]="errorMessage" 
+      (clearMessage)="clearMessage()"
+    ></app-alert-error>
   }
   <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
     <label for="text" class="font-medium font-sans text-sm sm:text-base text-gray-800">
@@ -10,12 +13,12 @@
       name="text" 
       id="text"
       formControlName="text"
-      class="w-full h-32 px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-pink-200 rounded-xl focus:outline-none  focus:border-pink-400 placeholder:text-pink-300 focus:placeholder:text-pink-100"
+      class="w-full h-32 px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-300 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-pink-400 focus:ring-2 focus:ring-pink-300 placeholder:text-gray-300 focus:placeholder:text-gray-100"
     >
     </textarea>
     @if(textForm.get('text')?.invalid && textForm.get('text')?.touched) {
       @if(textForm.get('text')?.errors?.['required']) {
-        <span class="text-red-600 ml-1 text-sm sm:text-base">Text is required</span>
+        <span class="text-red-600 ml-1 text-xs sm:text-sm">Text is required</span>
       }
     }
   </div>
