--- a/src/app/pages/page-generate-qrcode/form-whatsapp/form-whatsapp.component.html
+++ b/src/app/pages/page-generate-qrcode/form-whatsapp/form-whatsapp.component.html
@@ -1,6 +1,9 @@
 <form [formGroup]="whatsappForm" (ngSubmit)="onSubmit()" class="bg-gradient-to-tr from-pink-50 to-blue-200 my-4 sm:my-8 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
   @if(errorMessage) {
-    <app-alert-error [errorMessage]="errorMessage" (clearMessage)="clearMessage()"></app-alert-error>
+    <app-alert-error 
+      [errorMessage]="errorMessage" 
+      (clearMessage)="clearMessage()"
+    ></app-alert-error>
   }
   <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
     <label for="whatsapp" class="font-medium font-sans text-sm sm:text-base text-gray-800">
@@ -13,11 +16,11 @@
       placeholder="081234567890"
       formControlName="whatsapp"
       required
-      class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-pink-200 rounded-xl focus:outline-none  focus:border-pink-400 placeholder:text-pink-300 focus:placeholder:text-pink-100"
+      class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-300 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-pink-400 focus:ring-2 focus:ring-pink-300 placeholder:text-gray-300 focus:placeholder:text-gray-100"
     >
     @if(whatsappForm.get('whatsapp')?.invalid && whatsappForm.get('whatsapp')?.touched) {
       @if(whatsappForm.get('whatsapp')?.errors?.['required']) {
-        <span class="text-red-600 ml-1 text-sm sm:text-base">Phone number is required</span>
+        <span class="text-red-600 ml-1 text-xs sm:text-sm">Phone number is required</span>
       }
     }
   </div>
