--- a/src/app/pages/page-generate-qrcode/form-wifi/form-wifi.component.html
+++ b/src/app/pages/page-generate-qrcode/form-wifi/form-wifi.component.html
@@ -1,6 +1,9 @@
 <form [formGroup]="wifiForm" (ngSubmit)="onSubmit()" class="bg-gradient-to-tr from-pink-50 to-blue-200 my-4 sm:my-8 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
   @if(errorMessage) {
-    <app-alert-error [errorMessage]="errorMessage" (clearMessage)="clearMessage()"></app-alert-error>
+    <app-alert-error 
+      [errorMessage]="errorMessage" 
+      (clearMessage)="clearMessage()"
+    ></app-alert-error>
   }
   <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
     <label for="ssid" class="font-medium font-sans text-sm sm:text-base text-gray-800">
@@ -13,11 +16,11 @@
       placeholder="wifi123"
       formControlName="ssid"
       required
-      class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-pink-200 rounded-xl focus:outline-none  focus:border-pink-400 placeholder:text-pink-300 focus:placeholder:text-pink-100"
+      class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-300 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-pink-400 focus:ring-2 focus:ring-pink-300 placeholder:text-gray-300 focus:placeholder:text-gray-100"
     >
     @if(wifiForm.get('ssid')?.invalid && wifiForm.get('ssid')?.touched) {
       @if(wifiForm.get('ssid')?.errors?.['required']) {
-        <span class="text-red-600 ml-1 text-sm sm:text-base">SSID is required</span>
+        <span class="text-red-600 ml-1 text-xs sm:text-sm">SSID is required</span>
       }
     }
   </div>
@@ -32,11 +35,11 @@
       placeholder="password123"
       formControlName="password"
       required
-      class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-pink-200 rounded-xl focus:outline-none  focus:border-pink-400 placeholder:text-pink-300 focus:placeholder:text-pink-100"
+      class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-300 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-pink-400 focus:ring-2 focus:ring-pink-300 placeholder:text-gray-300 focus:placeholder:text-gray-100"
     >
     @if(wifiForm.get('password')?.invalid && wifiForm.get('password')?.touched) {
       @if(wifiForm.get('password')?.errors?.['required']) {
-        <span class="text-red-600 ml-1 text-sm sm:text-base">Password is required</span>
+        <span class="text-red-600 ml-1 text-xs sm:text-sm">Password is required</span>
       }
     }
   </div>
@@ -49,7 +52,7 @@
       formControlName="encryption" 
       id="encryption" 
       required
-      class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-pink-200 rounded-xl focus:outline-none  focus:border-pink-400 placeholder:text-pink-300 focus:placeholder:text-pink-100"
+      class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-300 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-pink-400 focus:ring-2 focus:ring-pink-300 placeholder:text-gray-300 focus:placeholder:text-gray-100"
     >
       <option selected value="WPA">WPA</option>
       <option value="WEP">WEP</option>
@@ -57,7 +60,7 @@
     </select>      
     @if(wifiForm.get('encryption')?.invalid && wifiForm.get('encryption')?.touched) {
       @if(wifiForm.get('encryption')?.errors?.['required']) {
-        <span class="text-red-600 ml-1 text-sm sm:text-base">Encryption is required</span>
+        <span class="text-red-600 ml-1 text-xs sm:text-sm">Encryption is required</span>
       }
     }
   </div>
