--- a/src/app/pages/page-generate-url/page-generate-url.component.html
+++ b/src/app/pages/page-generate-url/page-generate-url.component.html
@@ -11,7 +11,10 @@
     </div>
     <form [formGroup]="shotenUrlForm" (ngSubmit)="onSubmit()" class="bg-gradient-to-tr from-pink-50 to-blue-200 my-4 sm:my-8 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
       @if(errorMessage) {
-        <app-alert-error [errorMessage]="errorMessage" (clearMessage)="clearMessage()"></app-alert-error>
+        <app-alert-error 
+          [errorMessage]="errorMessage" 
+          (clearMessage)="clearMessage()"
+        ></app-alert-error>
       }
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
         <label for="urlOrigin" class="font-medium font-sans text-sm sm:text-base text-gray-800">
@@ -24,13 +27,13 @@
           formControlName="urlOrigin"
           placeholder="https://www.example.com"
           required
-          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans border-blue-200 rounded-xl focus:outline-none focus:border-blue-400 placeholder:text-blue-300 focus:placeholder:text-blue-100"
+          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-300 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-blue-400 focus:ring-2 focus:ring-blue-300 placeholder:text-gray-300 focus:placeholder:text-gray-100"
         >
         @if(shotenUrlForm.get('urlOrigin')?.invalid && shotenUrlForm.get('urlOrigin')?.touched) {
           @if(shotenUrlForm.get('urlOrigin')?.errors?.['required']) {
-            <span class="text-red-600 ml-1 text-sm sm:text-base">URL is required</span>
+            <span class="text-red-600 ml-1 text-xs sm:text-sm">URL is required</span>
           } @else if(shotenUrlForm.get('urlOrigin')?.errors?.['url']) {
-            <span class="text-red-600 ml-1 text-sm sm:text-base">Invalid URL format</span>
+            <span class="text-red-600 ml-1 text-xs sm:text-sm">Invalid URL format</span>
           }
         }
       </div>
@@ -44,7 +47,7 @@
           name="id"
           formControlName="id"
           placeholder="abc123"
-          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-blue-200 rounded-xl focus:outline-none  focus:border-blue-400 placeholder:text-blue-300 focus:placeholder:text-blue-100"
+          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-300 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-blue-400 focus:ring-2 focus:ring-blue-300"
         >
       </div>
       <div class="flex justify-end mt-6">
