--- a/src/app/pages/page-login/page-login.component.html
+++ b/src/app/pages/page-login/page-login.component.html
@@ -14,8 +14,7 @@
         <app-alert-error 
           [errorMessage]="errorMessage" 
           (clearMessage)="clearMessage()"
-        >
-        </app-alert-error>
+        ></app-alert-error>
       } 
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
         <label for="email" class="font-medium font-sans text-sm sm:text-base text-gray-800">
@@ -28,13 +27,13 @@
           formControlName="email"
           placeholder="email@example.com"
           required
-          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none focus:border-gray-300"
+          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-300 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-gray-400 focus:ring-2 focus:ring-gray-300"
         >
         @if(loginForm.controls['email'].invalid && loginForm.controls['email'].touched){
           @if(loginForm.controls['email'].hasError('required')){
-            <span class="text-red-600 ml-1 text-sm sm:text-base">Email is required</span>            
+            <span class="text-red-600 ml-1 text-xs sm:text-sm">Email is required</span>            
           } @else if(loginForm.controls['email'].hasError('email')){
-            <span class="text-red-600 ml-1 text-sm sm:text-base">Invalid email format</span>
+            <span class="text-red-600 ml-1 text-xs sm:text-sm">Invalid email format</span>
           }
         }
       </div>
@@ -51,15 +50,15 @@
           required
           minlength="12"
           pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{12,}"
-          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none  focus:border-gray-300"
+          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-300 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-gray-400 focus:ring-2 focus:ring-gray-300"
         >
         @if(loginForm.controls['password'].invalid && loginForm.controls['password'].touched){
           @if(loginForm.controls['password'].hasError('required')){
-            <span class="text-red-600 ml-2 text-sm sm:text-base">Password is required</span>            
+            <span class="text-red-600 ml-1 text-xs sm:text-sm">Password is required</span>            
           } @else if (loginForm.controls['password'].hasError('minlength')) {
-            <span class="text-red-600 ml-2 text-sm sm:text-base">Password must be at least 12 characters</span>
+            <span class="text-red-600 ml-1 text-xs sm:text-sm">Password must be at least 12 characters</span>
           } @else if (loginForm.controls['password'].hasError('pattern')) {
-            <span class="text-red-600 ml-2 text-sm sm:text-base">Password must contain at least have number, uppercase and lowercase letter</span>
+            <span class="text-red-600 ml-1 text-xs sm:text-sm">Password must contain at least have number, uppercase and lowercase letter</span>
           }
         }
       </div>
