--- a/src/app/pages/page-register/page-register.component.html
+++ b/src/app/pages/page-register/page-register.component.html
@@ -14,15 +14,13 @@
         <app-alert-error 
           [errorMessage]="errorMessage" 
           (clearMessage)="clearMessage()"
-          >
-        </app-alert-error>
+        ></app-alert-error>
       }
       @if(successMessage) {
         <app-alert-success 
           [errorMessage]="successMessage" 
           (clearMessage)="clearMessage()"
-          >
-        </app-alert-success>
+        ></app-alert-success>
       }
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
         <label for="name" class="font-medium font-sans text-sm sm:text-base text-gray-800">
@@ -35,11 +33,11 @@
           formControlName="name"
           placeholder="Your Name"
           required
-          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none focus:border-gray-300"
+          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-300 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-gray-400 focus:ring-2 focus:ring-gray-300"
         >
         @if(registerForm.controls['name'].invalid && registerForm.controls['name'].touched){
           @if(registerForm.controls['name'].hasError('required')){
-            <span class="text-red-600 ml-1 text-sm sm:text-base">Name is required</span>
+            <span class="text-red-600 ml-1 text-xs sm:text-sm">Name is required</span>
           }
         }
       </div>
@@ -54,13 +52,13 @@
           formControlName="email"
           placeholder="email@example.com"
           required
-          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none focus:border-gray-300"
+          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-300 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-gray-400 focus:ring-2 focus:ring-gray-300"
         >
         @if(registerForm.controls['email'].invalid && registerForm.controls['email'].touched){
           @if(registerForm.controls['email'].hasError('required')){
-            <span class="text-red-600 ml-1 text-sm sm:text-base">Email is required</span>            
+            <span class="text-red-600 ml-1 text-xs sm:text-sm">Email is required</span>            
           } @else if(registerForm.controls['email'].hasError('email')){
-            <span class="text-red-600 ml-1 text-sm sm:text-base">Invalid email format</span>
+            <span class="text-red-600 ml-1 text-xs sm:text-sm">Invalid email format</span>
           }
         }
       </div>
@@ -77,15 +75,15 @@
           required
           minlength="12"
           pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{12,}"
-          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none  focus:border-gray-300"
+          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-300 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-gray-400 focus:ring-2 focus:ring-gray-300"
         >
         @if(registerForm.controls['password'].invalid && registerForm.controls['password'].touched){
           @if(registerForm.controls['password'].hasError('required')){
-            <span class="text-red-600 ml-1 text-sm sm:text-base">Password is required</span>
+            <span class="text-red-600 ml-1 text-xs sm:text-sm">Password is required</span>
           } @else if (registerForm.controls['password'].hasError('minlength')) {
-            <span class="text-red-600 ml-1 text-sm sm:text-base">Password must be at least 12 characters</span>
+            <span class="text-red-600 ml-1 text-xs sm:text-sm">Password must be at least 12 characters</span>
           } @else if (registerForm.controls['password'].hasError('pattern')) {
-            <span class="text-red-600 ml-1 text-sm sm:text-base">Password must contain at least one number, one uppercase and one lowercase letter</span>
+            <span class="text-red-600 ml-1 text-xs sm:text-sm">Password must contain at least one number, one uppercase and one lowercase letter</span>
           }
         }
       </div>
@@ -102,17 +100,17 @@
           required
           minlength="12"
           pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{12,}"
-          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none  focus:border-gray-300"
+          class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-300 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-gray-400 focus:ring-2 focus:ring-gray-300"
         >
         @if(registerForm.controls['confirmPassword'].invalid && registerForm.controls['confirmPassword'].touched){
           @if(registerForm.controls['confirmPassword'].hasError('required')){
-            <span class="text-red-600 ml-1 text-sm sm:text-base">Confirm Password is required</span>
+            <span class="text-red-600 ml-1 text-xs sm:text-sm">Confirm Password is required</span>
           } @else if (registerForm.controls['confirmPassword'].hasError('minlength')) {
-            <span class="text-red-600 ml-1 text-sm sm:text-base">Confirm Password must be at least 12 characters</span>
+            <span class="text-red-600 ml-1 text-xs sm:text-sm">Confirm Password must be at least 12 characters</span>
           } @else if (registerForm.controls['confirmPassword'].hasError('pattern')) {
-            <span class="text-red-600 ml-1 text-sm sm:text-base">Confirm Password must contain at least one number, one uppercase and one lowercase letter</span>
+            <span class="text-red-600 ml-1 text-xs sm:text-sm">Confirm Password must contain at least one number, one uppercase and one lowercase letter</span>
           } @else if (registerForm.controls['confirmPassword'].hasError('mismatch')) {
-            <span class="text-red-600 ml-1 text-sm sm:text-base">Passwords do not match</span>
+            <span class="text-red-600 ml-1 text-xs sm:text-sm">Passwords do not match</span>
           }
         }
       </div>
