--- a/src/app/pages/page-generate-url/page-generate-url.component.html
+++ b/src/app/pages/page-generate-url/page-generate-url.component.html
@@ -61,25 +61,11 @@
       </div>
     </form>
     @if(urlShort) {
-      <div class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50">
-        <div class="bg-gradient-to-tr w-5/6 sm:w-3/4 from-pink-50 to-blue-200 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
-          <div class="flex justify-end mb-4">
-            <button (click)="closeModal()" class="inline-flex items-center justify-center">
-              <fa-icon [icon]="faTimes" class="text-xl sm:text-2xl text-pink-800 hover:text-pink-900"></fa-icon>
-            </button>
-          </div>
-          <div class="flex flex-row items-center justify-between space-x-4">
-            <div class="flex h-9 sm:h-12 bg-white border-2 border-blue-200 w-full rounded-xl">
-              <p class="inline-flex px-2.5 sm:px-3 py-1.5 sm:py-2 text-sm sm:text-base font-medium font-sans leading-relaxed text-gray-800 sm:leading-7" id="qrcodeText">
-              {{ urlShort }}
-              </p>
-            </div>
-            <button (click)="copyToClipboard()" class="inline-flex bg-blue-700 text-white text-sm sm:text-base rounded-xl px-4 md:px-6 py-2 md:py-2.5 font-medium font-sans hover:bg-blue-800 hover:text-blue-100">
-              Copy
-            </button>
-          </div>
-        </div>
-      </div>
+      <app-modal-shorthen-url 
+        [urlShort]="urlShort"
+        (closeModalEvent)="closeModal()"
+        (copyToClipboardEvent)="copyToClipboard()"
+      ></app-modal-shorthen-url>
     }
   </div>
   <app-footer></app-footer>
