--- a/src/app/pages/page-login/page-login.component.html
+++ b/src/app/pages/page-login/page-login.component.html
@@ -1,5 +1,10 @@
 <div class="flex items-center justify-center min-h-screen bg-gradient-to-tr from-pink-50 to-blue-200">
   <div class="relative px-4 py-5 mx-auto w-full sm:min-w-xl md:max-w-screen-md lg:max-w-screen-sm md:px-24 lg:px-8 lg:py-10">
+    <div class="flex justify-center items-center my-8 sm:my-12">
+      <a routerLink="/">
+        <img src="src/assets/images/simplify.png" alt="Simplify Logo">
+      </a>
+    </div>
     <form 
       [formGroup]="loginForm" 
       (ngSubmit)="onSubmit()" 
