--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -29,7 +29,8 @@
           }
         </ul>
       </div>
-      <div class="flex justify-center sm:justify-end items-end col-span-2 sm:col-span-1">
+      <div class="flex flex-col justify-center items-center sm:justify-end sm:items-end space-y-2 col-span-2 sm:col-span-1 ">
+        <img src="/src/assets/images/simplify.png" alt="Simplify Logo">
         <p class="font-medium font-sans text-gray-800 text-sm sm:text-base">
           Copyright &copy; {{ dateYear }} Simplify All Rights Reserved
         </p>
